--- a/compose.yml
+++ b/compose.yml
@@ -87,3 +87,26 @@ services:
   #     - caddy_config:/config
   #   command: run --config /etc/caddy/caddy.yaml --adapter yaml
 
+  whoami:
+  image: traefik/whoami
+  container_name: whoami
+  hostname: whoami
+  restart: unless-stopped
+  ports:
+    - 8080:80
+  networks:
+    sozu-network:
+      ipv4_address: 192.168.168.230
+
+
+
+  hello:
+    image: crccheck/hello-world
+    container_name: hello
+    hostname: hello
+    restart: unless-stopped
+    ports:
+      - 8800:8000
+    networks:
+      sozu-network:
+        ipv4_address: 192.168.168.240
